# aiogram-bot-template

./: .env.example  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_02_09_1756-eb3959cece53_init.py  2026_02_17_1359-99222fa0a378_init.py
app/: __main__.py  config.py
app/database/: base.py  manager.py  session.py
app/exceptions/: exceptions.py
app/handlers/: admin.py  start.py
app/keyboards/: admin.py  user.py
app/middlewares/: admin.py  database.py  subscription.py  user.py
app/models/: __init__.py  user.py  users.py
app/repositories/: base.py  user.py
app/schemas/: user.py
app/services/: base.py  user.py
app/states/: admin.py
app/utils/: deep_link.py
